--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	  "start": "nodemon index.mjs"
+    "start": "nodemon index.mjs"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "pug": "^3.0.2"
   }
 }
